# MyGRAPHICS

./: .gitignore  Cargo.toml  LICENSE  README.md  USAGE.md
docs/: api_reference.md  architecture.md  implementation_plan.md
examples/: code-editor.rs  demo.rs  draw_canvas.rs  font_test.rs  font_test2.rs  hello.rs  input_test.rs  my_program.rs  mytest_1.rs  test_suite.rs
my-graphics-macros/: Cargo.toml
my-graphics-macros/src/: lib.rs
src/: commands.rs  context.rs  lib.rs  renderer.rs  shader.wgsl  tests.rs  texture.rs  window.rs
src/backend/: mod.rs
