[package]
name = "my_graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
glam = "0.25"
env_logger = "0.11"
log = "0.4"
glyphon = "0.5"
